fixed z-index bugs

--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -83,7 +83,7 @@ span.hamb-menu i.bi{
 /* Hamburger Menu flexed */
 div.hamb-menu{
     display: none;
-    z-index: 1;
+    z-index: 2;
     margin: 6px;
     position: absolute;
     align-items: center;
@@ -149,7 +149,7 @@ nav{
     padding-left: 20px;
     padding-right: 20px;
     background-color:white;
-    z-index: 2;
+    z-index: 3;
 }
 
 div.navbar .nav-brand{
